--- a/spring-cloud-04-remote-config-github-security-server/pom.xml
+++ b/spring-cloud-04-remote-config-github-security-server/pom.xml
@@ -1,31 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.5.BUILD-SNAPSHOT</version>
-		<relativePath/> 
+		<version>2.2.0.BUILD-SNAPSHOT</version>
+		<relativePath />
 	</parent>
 	<groupId>com.mimaraslan</groupId>
-	<artifactId>spring-cloud-03-remote-config-github-server</artifactId>
+	<artifactId>spring-cloud-04-remote-config-github-security-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-cloud-03-remote-config-github-server</name>
+	<name>spring-cloud-04-remote-config-github-security-server</name>
 	<description>Remote config-github client project for Spring Cloud</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.BUILD-SNAPSHOT</spring-cloud.version>
 	</properties>
 
 	<dependencies>
-	
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
