--- a/spring-cloud-04-remote-config-github-security-server/src/main/resources/application.yml
+++ b/spring-cloud-04-remote-config-github-security-server/src/main/resources/application.yml
@@ -1,17 +1,22 @@
 ---
 server:
-  port: 8888           
+  port: 8888    
+        
 spring:
   cloud:
     config:
       server:
         git:
-          uri: https://github.com/mimaraslan/spring-cloud-config1 # default
+          uri: https://github.com/mimaraslan/spring-cloud-config1 # default 
           search-paths:
-            - 'station*'
+            - 'station*'  
+          force-pull: true  
           repos:
              local:
                 pattern: '*/config2'
                 uri: https://github.com/mimaraslan/spring-cloud-config2 # alternative
                 search-paths:
-                 - 'station*'       
+                 - 'station*'  
+  profiles:
+    active:
+    - dev,prod
