--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+spring-cloud-06-db-task-logs/mvnw
+spring-cloud-06-db-task-logs1/mvnw
