--- a/spring-cloud-06-db-task-logs/src/main/resources/application.properties
+++ b/spring-cloud-06-db-task-logs/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+server.port=8011
+
 spring.application.name=Task Processor
-logging.level.org.springframework.cloud.task=DEBUG
 
 spring.datasource.url=jdbc:mysql://localhost/mytasklogs
 spring.datasource.username=katerina
 spring.datasource.password=123456789
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.org.springframework.cloud.task=DEBUG
