--- a/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/pom.xml
+++ b/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/pom.xml
@@ -15,7 +15,8 @@
 	<description>Spring Cloud</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
+	<!-- <java.version>1.8</java.version> -->
 		<spring-cloud.version>Hoxton.BUILD-SNAPSHOT</spring-cloud.version>
 	</properties>
 
