--- a/spring-cloud-06-db-task-logs/src/main/resources/application.properties
+++ b/spring-cloud-06-db-task-logs/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-server.port=8011
+#server.port=8011
 
 spring.application.name=Task Processor
-
-spring.datasource.url=jdbc:mysql://localhost/mytasklogs
-spring.datasource.username=katerina
-spring.datasource.password=123456789
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 logging.level.org.springframework.cloud.task=DEBUG
+
+#spring.datasource.url=jdbc:mysql://localhost/mytasklogs
+#spring.datasource.username=katerina
+#spring.datasource.password=123456789
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/mytasklogs
+spring.datasource.url=jdbc:h2:mem:mytasklogs
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.settings.web-allow-others=true
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
