--- a/spring-cloud-07-db-task-logs-sink-rabbitmq/pom.xml
+++ b/spring-cloud-07-db-task-logs-sink-rabbitmq/pom.xml
@@ -37,12 +37,12 @@
 		    <artifactId>spring-cloud-deployer-local</artifactId>
 		    <version>2.1.0.RELEASE</version>
 		</dependency>  	
-		<!-- 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
-		-->
+		
+        <dependency>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -58,6 +58,7 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
