--- a/spring-cloud-07-db-task-logs-sink-rabbitmq/src/main/resources/application.properties
+++ b/spring-cloud-07-db-task-logs-sink-rabbitmq/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+server.port=8081
 spring.rabbitmq.broker-url=tcp://127.0.0.1:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-spring.cloud.stream.bindings.input.destination=tasktopic
+spring.cloud.stream.bindings.input.destination=mytasktopic
 logging.level.org.springframework.cloud.task=DEBUG
 logging.level.org.springframework.cloud.stream=DEBUG
