--- a/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/src/main/resources/application.properties
+++ b/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8882
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.cloud.stream.bindings.output.destination=tasktopic
+server.port=8082
+spring.rabbitmq.broker-url=tcp://127.0.0.1:5672
+spring.rabbitmq.username=rseroter
+spring.rabbitmq.password=rseroter
+spring.cloud.stream.bindings.output.destination=mytasktopic
