--- a/spring-cloud-03-remote-config-github/src/main/resources/application.properties
+++ b/spring-cloud-03-remote-config-github/src/main/resources/application.properties
@@ -1,3 +1,18 @@
-#security.basic.enabled=true
-#security.user.name=abc
-#security.user.password=123
+spring.security.user.name=katerina
+spring.security.user.password=123456789
+
+## Tell Spring Security (if used) to require requests over HTTPS
+#security.require-ssl=true
+#
+## The format used for the keystore 
+#server.ssl.key-store-type=PKCS12
+#
+## The path to the keystore containing the certificate
+#server.ssl.key-store=classpath:keystore.p12
+#
+## The password used to generate the certificate
+#server.ssl.key-store-password=123456
+#server.ssl.key-password=123456
+#
+## The alias mapped to the certificate
+#server.ssl.key-alias=tomcat
