--- a/spring-cloud-03-remote-config-github/src/main/resources/application.yml
+++ b/spring-cloud-03-remote-config-github/src/main/resources/application.yml
@@ -1,21 +1,25 @@
----
 server:
   port: 8888
+              
 spring:
   cloud:
     config:
       server:
-        encrypt:
-          enabled: false
         git:
-          uri: https://github.com/mimaraslan/spring-cloud/tree/master/spring-cloud-config1/station1 # default
-          #username: abc
-          #password: abc
-#          search-paths:
-#            - 'station*'
-#          repos:
-#             local:
-#                pattern: '*/local'
-#                uri: https://github.com/mimaraslan/spring-cloud/tree/master/spring-cloud-config1 # alt
-#                search-paths:
-#                 - 'station*'
+          uri: https://github.com/mimaraslan/spring-cloud/tree/master/spring-cloud-config1
+          #username: mimaraslan
+          #password: MYPASSWORD
+          search-paths: 
+          - 'station*'
+          repos:
+            perf:
+              pattern:
+              - '*/config2'
+              uri: https://github.com/mimaraslan/spring-cloud/tree/master/spring-cloud-config2
+              search-paths:
+              - 'station*'
+        encrypt:
+          enabled: false         
+            
+
+          
