--- a/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/src/main/resources/application.properties
+++ b/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-server.port=8082
+#server.port=8080
 spring.rabbitmq.broker-url=tcp://127.0.0.1:5672
-spring.rabbitmq.username=rseroter
-spring.rabbitmq.password=rseroter
-spring.cloud.stream.bindings.output.destination=mytasktopic
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.cloud.stream.bindings.input.destination=mytasktopic
+logging.level.org.springframework.cloud.task=debug
+logging.level.org.springframework.cloud.stream=debug
