--- a/spring-cloud-07-db-task-logs-sink-rabbitmq/pom.xml
+++ b/spring-cloud-07-db-task-logs-sink-rabbitmq/pom.xml
@@ -59,7 +59,10 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
