--- a/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/pom.xml
+++ b/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/pom.xml
@@ -20,7 +20,10 @@
 	</properties>
 
 	<dependencies>	
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-task</artifactId>
