--- a/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/src/main/resources/application.properties
+++ b/spring-cloud-08-db-task-logs-sink-rabbitmq-intake/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8080
+server.port=8080
 spring.rabbitmq.broker-url=tcp://127.0.0.1:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
