--- a/spring-cloud-03-remote-config-github-server/src/main/resources/application.yml
+++ b/spring-cloud-03-remote-config-github-server/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
           repos:
              local:
                 pattern: '*/config2'
-                uri: https://github.com/mimaraslan/spring-cloud-config2 # alt
+                uri: https://github.com/mimaraslan/spring-cloud-config2 # alternative
                 search-paths:
                  - 'station*'       
             
